--- a/.env
+++ b/.env
@@ -12,3 +12,9 @@ KEY_SECRET='eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9'
 
 
 DURATION_TOKEN=84000
+
+
+#cirnado o primeiro login quando o banco é iniciado
+MASTER_NAME=master
+MASTER_EMAIL=master@micks.com.br
+MASTER_PASSWORD="Abc123..."
